<resources>
    <string name="app_name">BeerCounter</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="_0">0</string>
    <string name="add_a_beer">Add a Beer</string>
    <string name="reset">Reset</string>
    <string name="back">Back</string>
    <string name="view_history">View History</string>
    <string name="save_count">Save count</string>
</resources>