<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@color/background_color">

    <TextView
        android:id="@+id/tvBeerCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_text"
        android:textSize="64sp"
        android:text="@string/_0"
        android:layout_marginBottom="24dp" />

    <Button
        android:id="@+id/btnAddBeer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_a_beer"
        android:backgroundTint="@color/button_color"
        android:textColor="@android:color/white"
        android:elevation="4dp"/>

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:backgroundTint="@color/button_color"
        android:textColor="@android:color/white"
        android:elevation="4dp"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_count"
        android:backgroundTint="@color/button_color"
        android:textColor="@android:color/white"
        android:elevation="4dp"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnViewHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_history"
        android:backgroundTint="@color/button_color"
        android:textColor="@android:color/white"
        android:elevation="4dp"
        android:layout_marginTop="16dp"/>

</LinearLayout>
